src/app/components/indoor-navigation-toolbar/indoor-navigation-toolbar.component.scss
#floor-change {
  --background: var(--ConcordiaRed);
  --background-activated: var(--ConcordiaRed);
  --inner-padding-bottom: 0px;
  padding-left: 5em;
  color: white;
  display: contents;
}

.select-floor {
  position: relative;
  max-width: fit-content;
}

.building {
  --background: var(--ConcordiaRed);
  --background-activated: var(--ConcordiaRed);
  color: white;
  padding-left: 1em;
}

.up-button, .down-button {
  color: white;
  text-transform: none;
  max-width: fit-content;
  --border-color: white;
}

.up-button {
  padding-left: 3em;
}

.down-button {
  padding-right: 3em;
}

.search-location {
  position: relative;
  padding: 0;
}

.sc-ion-searchbar-ios-h {
  padding: 0;
  display: contents;
}

.searchbar-input-container .sc-ion-searchbar-ios {
  height: 40px;
}


.popover-content {
  --display: content;
}

.indoorToolbar {
  background-color: var(--ConcordiaRed);
}

.settings-button {
  --color: white;
  --shape: round;
  --size: large;
  padding-right: 0.5em;
}

